--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "mongoose-unique-validator": "^1.0.5",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
+    "passport-linkedin": "^1.0.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^4.0.0"
+    "passport-local-mongoose": "^4.0.0",
+    "passport-twitter": "^1.0.4",
+    "twitter": "^1.7.0"
   },
   "name": "passport",
   "version": "1.0.0",
